--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3>CV Highlights</h3>
             <p>
             <ul>
-                <li>Currently going through CS253 – Web Application Engineering and CS61A – Structure & Interpretation of Computer Programs</li>
+                <li>Currently going through CS253 â€“ Web Application Engineering and CS61A â€“ Structure & Interpretation of Computer Programs</li>
                 <li>Learnt basic Python, JavaScript, HTML, CSS on Codecademy.com.</li>
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms.</li>
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
@@ -61,9 +61,9 @@
             <p>
             <ul>
                 <li>
-                <span id="course-name">HTML & CSS for Beginners – Web Fundamentals</span> – Codecademy.com</li>
+                <span id="course-name">HTML & CSS for Beginners â€“ Web Fundamentals</span> â€“ Codecademy.com</li>
                 <li>
-                <span id="course-name">Python – Fundamentals and Dynamic Programming </span> - Udacity.com</li>
+                <span id="course-name">Python â€“ Fundamentals and Dynamic Programming </span> - Udacity.com</li>
                 <li>
             <h3>Technical Skills</h3>
             <p>
